# ply-files-browser

./: CMakeLists.txt
include/: GLWindow.hpp  GridObject.hpp  Mesh.hpp  Object.hpp  Polygon.hpp  PolygonObject.hpp  Quad.hpp  Shape.hpp  Toolpack.hpp  Triangle.hpp  TriangleObject.hpp
shaders/: fragment_shader.glsl  fragment_shader_outline.glsl  vertex_shader.glsl
src/: GLWindow.cpp  GridObject.cpp  Mesh.cpp  PolygonObject.cpp  Quad.cpp  Shape.cpp  Toolpack.cpp  Triangle.cpp  TriangleObject.cpp  main.cpp
test/: CMakeLists.txt
test/src/: GLWindowTest.cpp
